# Pythonista

./: DropboxSyncv2.py  README.md  WorkingCopyPythonistaSettingsiOS11.md  _config.yml  browser-code.py  dropboxloginv2.py  index.html  index.md  params.json  update_repo.py
@IP/: ifconfig.me.py
@ReplayKit/: Add Screen Recorder Button.py
@appex/: Import File.py  Import URL.py  MobileBlogger.py  WebPageSourceScrapAppex.py  WiFi Import to Pythonista.py
@apple/: Top Apps.py  _appreviews-no-pythonista.py  iTunes Affiliate Link.py
@apps/: UpsideDownText.py  listApp.py  sketch_app.py
@audio/: generating-tones.py  sounder.py
@authentification/: local_authentication.py
@automation/: junk.py  script.py  upnp_discovery.py
@backup/: Backup Contacts.py  FileTransfer.py  PythonistaBackup.py
@blog/: BlogGithub.py  MobileBlogger.py  insert_blog_entries.py  post2statamic.py  scriptogram.py
@browse/: bookmarks.json  file_browser.py  fileman.py  (+3 more)
VisualExamples/: Makefile.am  bounce.py  bounce2.py  boxlighttest.py  brad.py  car_collisions.py  circle_ball_pi.py  colorsliders.py  conch.py  controlstest.py  convex.py  coriolis_kick.py  crossproduct.py  crystal.py  differential_gear.py  dipole.py  doublependulum.py  drape.py  electric_collision.py  electric_motor.py  electro_collision.py  extruded_columns.py  extrusion_examples.py  extrusion_overview.py  faces_cone.py  faces_heightfield.py  fake_ball_bounce2.py  fake_bounce1.py  flower128.tga  fluker_collision.py  gas.py  glinfo.py  graphtest.py  gyro.py  gyro2.py  hanoi.py  labels.py  lathe.py  lorenz.py  mandelbrot.py  (+21 more)
(+4651 files in other folders)
